--- a/Resume/index.html
+++ b/Resume/index.html
@@ -6,7 +6,7 @@
      <meta name="keywords" content="Kostya Pidlypnyi">
      <meta name="description" content="Resume">
      <link href="css/style.css" type="text/css" rel="stylesheet">
-     <link rel="stylesheet" type="text/css" href="css/media.less">
+     <link rel="stylesheet" media="screen" href="css/media.css">
 </head>
 <body>
    <heder>
