--- a/Resume/index.html
+++ b/Resume/index.html
@@ -7,6 +7,7 @@
      <meta name="description" content="Resume">
      <link href="css/style.css" type="text/css" rel="stylesheet">
      <link rel="stylesheet" media="screen" href="css/media.css">
+     
 </head>
 <body>
    <heder>
@@ -53,8 +54,8 @@
        <div class="hobby">
            <h3 id="Tchange">ABOUT ME</h3>
            <br>
-           <p>I have successfully completed a training course of SoftServe IT Academy program HTML App Development Fundamentals (HTML5/CSS3/JavaScript). Now I continue to study in this direction. I also study architecture at the University of Oil and Gas, at the moment I am in the fourth year. </p>
-              <h3 id="mh" style="letter-spacing:3px; text-align: center;">HOBBY</h3>
+           <p id="inf">I have successfully completed a training course of SoftServe IT Academy program HTML App Development Fundamentals (HTML5/CSS3/JavaScript). Now I continue to study in this direction. I also study architecture at the University of Oil and Gas, at the moment I am in the fourth year. </p>
+              <h3 id="mh" style="letter-spacing:3px;">HOBBY</h3>
                <div class="hobby1">
                     <p><img src="images/i1.png" alt="" align="middle" id="icon">96 HOURS </p>
                     <p><img src="images/i2.png" alt="" align="middle" id="icon">128 HOURS </p>
