--- a/Resume/index.html
+++ b/Resume/index.html
@@ -31,7 +31,7 @@
        <div class="photo">
           <img src="images/My%20photo.jpg" id="Myphoto" alt="Myphoto">
           <br><br>
-           <h3 id="Tchange" style="letter-spacing:3px; text-align: center;">SKILLS</h3>
+           <h3 id="Tchange1" style="letter-spacing:3px; text-align: center;">SKILLS</h3>
            
            
            <div class="skills1">
@@ -72,8 +72,8 @@
    </div>
     <div class="project">
            <h3 id="Tchange">MY PROJECTS</h3>
-           <img src="images/p1.jpg" alt="my work" id="p1">
-           <a href="https://pkostyav.github.io/"><img src="images/p2.jpg" alt="my work" id="p2"></a>
+             <a href="https://pkostyav.github.io/"><img src="images/p2.jpg" alt="my work" id="p1"></a>
+           <img src="images/p1.jpg" alt="my work" id="p2">
            <img src="images/p1.jpg" alt="my work" id="p3">
            <img src="images/p1.jpg" alt="my work" id="p4">
            <img src="images/p1.jpg" alt="my work" id="p5">
