--- a/Resume/index.html
+++ b/Resume/index.html
@@ -37,8 +37,8 @@
            <div class="skills1">
              <h3 id="Tchange" style="letter-spacing:3px; text-align: left;">Web</h3>
              <br>
-              <p ><img src="images/i4.png" alt="" align="middle" id="icon">4 MONTHS </p>
-              <p><img src="images/i5.png" alt="" align="middle" id="icon">4 MONTHS </p>
+              <p ><img src="images/i4.png" alt="" align="middle" id="icon">396 HOURS </p>
+              <p><img src="images/i5.png" alt="" align="middle" id="icon">87 DAYS </p>
               <p><img src="images/i6.png" alt="" align="middle" id="icon">2 MONTHS </p>  
            </div>
            <div class="skills2">
