--- a/Resume/index.html
+++ b/Resume/index.html
@@ -7,6 +7,7 @@
      <meta name="description" content="Resume">
      <link href="css/style.css" type="text/css" rel="stylesheet">
      <link rel="stylesheet" media="screen" href="css/media.css">
+     <link rel="shortcut icon" href="images/avt.gif" type="image/x-icon">
      
 </head>
 <body>
