--- a/Resume/index.html
+++ b/Resume/index.html
@@ -82,9 +82,9 @@
        </div>
    <div class="scrolling">
           
-          <a href="https://pp.userapi.com/c836424/v836424102/40b9e/r2DEUVVE_1Q.jpg"><img id="scr" src="images/M1.jpg" alt=""/></a>
-          <a href="https://www.instagram.com/p/BZ1etMJAEo6/?taken-by=costantine.v"><img id="scr" src="images/IMG_1864.jpg" alt=""/></a>
-          <img id="scr" src="images/Mp3.jpg" alt=""/>
+          <a href="https://pp.userapi.com/c836424/v836424102/40b9e/r2DEUVVE_1Q.jpg"><img id="scr" src="images/Mp1.jpg" alt=""/></a>
+          <a href="https://www.instagram.com/p/BZ1etMJAEo6/?taken-by=costantine.v"><img id="scr" src="images/Mp2.JPG" alt=""/></a>
+          <img id="scr" src="images/IMG_1864.JPG" alt=""/>
           <img id="scr" src="images/Mp4.jpg" alt=""/>
            <img id="scr" src="images/Mp5.jpg" alt=""/>
           <img id="scr" src="images/Mp6.jpg" alt=""/>
